--- a/python-opencl/PKGBUILD
+++ b/python-opencl/PKGBUILD
@@ -4,7 +4,7 @@
 _pypiname=pyopencl
 pkgbase=python-pyopencl
 pkgname=('python2-pyopencl' 'python-pyopencl' 'pyopencl-headers')
-pkgver=2018.2.2
+pkgver=2018.2.3
 pkgrel=1
 epoch=1
 pkgdesc="A complete, object-oriented language binding of OpenCL to Python"
@@ -15,7 +15,7 @@ depends=('opencl-icd-loader' 'opencl-headers' 'mesa' 'boost-libs')
 makedepends=('ctags' 'boost' 'python-setuptools' 'python2-setuptools' 'python-mako' 'python2-mako'
              'python-numpy' 'python2-numpy' 'python-cffi' 'python2-cffi' 'git' 'pybind11')
  checkdepends=('python-six' 'python2-six' 'python-appdirs' 'python2-appdirs')
-source=("git+https://github.com/inducer/pyopencl.git?signed#tag=v${pkgver}.signed")
+source=("git+https://github.com/inducer/pyopencl.git?signed#tag=v${pkgver}")
 validpgpkeys=("900A958D9A0ACA58B1468F2471AA298BCA171145") # Andreas Ratchke
 sha256sums=('SKIP')
 
