--- a/netbeans/PKGBUILD
+++ b/netbeans/PKGBUILD
@@ -4,8 +4,8 @@
 # Contributor: Ben Wolsieffer <benwolsieffer@gmail.com>
 
 pkgname=netbeans
-pkgver=9.0
-pkgrel=5
+pkgver=10.0
+pkgrel=0
 pkgdesc='IDE for Java, HTML5, PHP, Groovy, C and C++'
 arch=('any')
 url='http://netbeans.apache.org/'
@@ -16,13 +16,16 @@ makedepends=('ant' 'java-environment=8')
 optdepends=('php: for developing programs in php'
             'groovy: for developing programs in groovy'
             'lib32-glibc')
-source=("https://www.apache.org/dist/incubator/netbeans/incubating-netbeans-java/incubating-9.0/incubating-${pkgname}-java-${pkgver}-source.zip"{,.asc}
+source=("https://www.apache.org/dist/incubator/netbeans/incubating-netbeans/incubating-${pkgver}/incubating-${pkgname}-${pkgver}-source.zip"{,.asc}
        "netbeans.clusters")
 
-sha256sums=('cc4cdaf3e1a6c80227410a6e54414e2109516d11a7150b7b9660061135bbc8db'
-            'SKIP'
-            'a7849ee0f21acef34a7bbd1216e8f822aba38284e3138ea04532224ad6f227c2')
-validpgpkeys=("1A83C352499305B6682E3D95CF7BA0AB1CCF4647")
+sha256sums=('456c9105b1968d976111650e05be1ccb23298cf09263e63183b8e7b8b6ce9478'
+    'SKIP'
+    'a7849ee0f21acef34a7bbd1216e8f822aba38284e3138ea04532224ad6f227c2')
+
+validpgpkeys=("1A83C352499305B6682E3D95CF7BA0AB1CCF4647" # Emilian Marius Bold <emi@apache.org>
+              "79C8F02A726E9EF53646D712B2BF814FA145CB2D" # Laszlo Kishalmi <lkishalmi@apache.org>
+            )
 
 build() {
   # full cluster configuration is not available at this time
@@ -31,10 +34,12 @@ build() {
   ant -quiet
 }
 
-check() {
-  cd "${srcdir}"
-  ant -quiet test -Djavac.compilerargs=-nowarn -Dbuild.compiler.deprecation=false -Dtest.includes=NoTestsJustBuild
-}
+# It appears that they have disabled the CI tests upstream, so I'll disable these for now...
+# see the parms here: https://travis-ci.org/apache/incubator-netbeans/jobs/473379270 
+#check() {
+#  cd "${srcdir}"
+#  ant -quiet test -Djavac.compilerargs=-nowarn -Dbuild.compiler.deprecation=false -Dtest.includes=NoTestsJustBuild
+#}
 
 package() {
   depends+=('java-environment>=9')
@@ -55,7 +60,7 @@ package() {
   install -Dm644 "nbbuild/packaging/snap/gui/$pkgname.desktop" \
     "${pkgdir}/usr/share/applications/${pkgname}.desktop"
   sed -i "s/Icon=.*/Icon=\/usr\/share\/pixmaps\/${pkgname}.png/" "${pkgdir}/usr/share/applications/${pkgname}.desktop"
-  install -Dm644 "ide.branding/release/${pkgname}.png" "${pkgdir}/usr/share/pixmaps/${pkgname}.png"
+  install -Dm644 "nbbuild/netbeans/nb/${pkgname}.png" "${pkgdir}/usr/share/pixmaps/${pkgname}.png"
 
   # remove non-linux non x86_64 binaries (FIXME: ideally we should just *not* build these)
   rm -rf "${pkgdir}/usr/lib/${pkgname}/ide/bin/nativeexecution/SunOS"*
