--- a/netbeans/PKGBUILD
+++ b/netbeans/PKGBUILD
@@ -4,34 +4,43 @@
 # Contributor: Ben Wolsieffer <benwolsieffer@gmail.com>
 
 pkgname=netbeans
-pkgver=10.0
-pkgrel=0
+pkgver=11.1
+pkgrel=1
 pkgdesc='IDE for Java, HTML5, PHP, Groovy, C and C++'
 arch=('any')
 url='https://netbeans.apache.org/'
 license=('Apache')
 # classpath is not needed, see FS#38567 (Oracle JDK does not need atk either)
 depends=('ttf-font')
-makedepends=('ant' 'java-environment=8')
+makedepends=('ant' 'java-environment=8' 'php' 'groovy')
 optdepends=('php: for developing programs in php'
             'groovy: for developing programs in groovy'
             'lib32-glibc')
-source=("https://www.apache.org/dist/incubator/netbeans/incubating-netbeans/incubating-${pkgver}/incubating-${pkgname}-${pkgver}-source.zip"{,.asc}
+
+# you can figure out what's the best urlbase in case you want to override it by going to:
+# https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.1/netbeans-11.1-source.zip
+urlbase="https://ftp.wayne.edu/apache/"
+source=("${urlbase}/${pkgname}/${pkgname}/${pkgver}/${pkgname}-${pkgver}-source.zip"
+        "https://www.apache.org/dist/${pkgname}/${pkgname}/${pkgver}/${pkgname}-${pkgver}-source.zip.asc"
        "netbeans.clusters")
 
-sha256sums=('456c9105b1968d976111650e05be1ccb23298cf09263e63183b8e7b8b6ce9478'
-    'SKIP'
-    'a7849ee0f21acef34a7bbd1216e8f822aba38284e3138ea04532224ad6f227c2')
+sha256sums=('292a1728e36fdf1a2ffe849b1559c9a3c1a3548107d18b842d9c99084783a526'
+            'SKIP'
+            'a7849ee0f21acef34a7bbd1216e8f822aba38284e3138ea04532224ad6f227c2')
 
 validpgpkeys=("1A83C352499305B6682E3D95CF7BA0AB1CCF4647" # Emilian Marius Bold <emi@apache.org>
               "79C8F02A726E9EF53646D712B2BF814FA145CB2D" # Laszlo Kishalmi <lkishalmi@apache.org>
+              "51B0E375B4941714A809F90E13E9F7AE3A4FD551" # Geert Jan <geertjan@apache.org>
+              "E6B7A203AA18497AB25202A7B4C1940FEA9364F1" # Jan Lahoda <jlahoda@apache.org>
+              "7B037EEBE0F0DEDFEE65B6983703AC389A12A9D4" # Neil C Smith <neilcsmith@apache.org>
+              "D0410592D20D84582E23D7F057D5896CD86C1320" # Reema Taneja <rtaneja@apache.org>
             )
 
 build() {
   # full cluster configuration is not available at this time
-  #ant -quiet -Dcluster.config=full
   export LDFLAGS_EXTRA=$LDFLAGS CFLAGS_EXTRA=$CFLAGS
-  ant -quiet
+  ant -quiet -Dcluster.config=full
+  #ant -quiet
 }
 
 # It appears that they have disabled the CI tests upstream, so I'll disable these for now...
@@ -49,7 +58,15 @@ package() {
 
   # Resources for platform config
   mkdir -p "${pkgdir}/usr/lib/${pkgname}"
-  cp -r "nbbuild/${pkgname}/"{java,harness,javafx,profiler,nb,ide,extide,apisupport,websvccommon,platform} "${pkgdir}/usr/lib/${pkgname}"
+
+  local built=$(find nbbuild/${pkgname}/ -name "nb.cluster.*.built" | cut -d '.' -f 3)
+  for plugin in $built
+  do
+    if [ -d "nbbuild/${pkgname}/${plugin}" ]
+    then
+        cp -r "nbbuild/${pkgname}/${plugin}" "${pkgdir}/usr/lib/${pkgname}"
+    fi
+  done
   install -Dm644 "${srcdir}/nbbuild/netbeans/etc/netbeans.import" -t "${pkgdir}/usr/lib/${pkgname}/etc/"
 
   # copy cluster configuration
